--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CLIENTID=1
-CLIENTSECRET=It7M8XEa7ZCdgtiV4wJj5F2Q67jVuPzxttd3lK53
-PASSPORTCLIENTSECRET=QcPukqXrlDqgOsiGfUmyOkFptGdmH8OPoXjkw1Eo
+BASEURL=http://oauth.btcc.com:8088
+CLIENTID=2
+CLIENTSECRET=RGmuKbK0edlXpRPYQ2w0cQkFw4JtHlGDt9Mz53RP
